# os161

./: .gitignore  CMakeLists.txt
kern/arch/mips/include/: vm.h
kern/arch/mips/locore/: trap.c
kern/arch/mips/syscall/: syscall.c
kern/arch/mips/vm/: dumbvm.c  ram.c
kern/compile/DUMBVM/: kernel
kern/conf/: FILE  HELLO  SYNC  SYSCALLS  THREADS  WAITPID  conf.kern
kern/include/: bitmap.h  fs.h  hello.h  history.h  lib.h  proc.h  synch.h  syscall.h  test.h
kern/lib/: bitmap.c  history.c  kgets.c  linked_list.c
kern/main/: hello.c  main.c  menu.c
kern/proc/: proc.c
kern/syscall/: io_syscalls.c  proc_syscalls.c  runprogram.c
kern/test/: bitmaptest.c  memstats.c
kern/thread/: synch.c  thread.c
man/: notes.tex
notes/: .gitignore  notes.tex
scripts/: build_install.sh  check-sys161.sh  debug.sh  doc.sh  run.sh
userland/testbin/argtest/: argtest.c
userland/testbin/forktest/: forktest.c
userland/testbin/io/: Makefile  build  io.c
userland/testbin/simplefork/: Makefile  build  simplefork.c
